--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Market value</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
         <div class="main">
             <div class="search-sort flex">
                 <input type="text" id="search-items" placeholder="Search By Name or Symbol" value="">
-                <div class="market-cap-sort flex" onclick="sortData('marketCap')">Sort By Mkt Cap</div>
-                <div class="parcentage-sort flex" onclick="sortData('parcentage')">Sort by percentage</div>
+                <button class="market-cap-sort flex" onclick="sortData('marketCap')">Sort By Mkt Cap</button>
+                <button class="parcentage-sort flex" onclick="sortData('parcentage')">Sort by percentage</button>
             </div>
             <div class="table-list">
                 <table class="table-items">
